--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "vue-croppa": "^1.3.8",
     "vue-router": "^3.0.7",
     "vuex": "^3.1.1",
-    "vuex-persist": "^2.0.1"
+    "vuex-persist": "^2.0.1",
+    "xterm": "^3.8.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.2",
