--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "tinymce": "^5.0.1",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-contextmenu": "^1.5.10",
     "vue-croppa": "^1.3.8",
     "vue-router": "^3.0.7",
     "vuex": "^3.1.1",
