--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/polyfill": "^7.4.4",
     "@tinymce/tinymce-vue": "^2.0.0",
     "axios": "~0.18.0",
+    "element-resize-detector": "^1.2.1",
     "element-ui": "^2.10.1",
     "event-source-polyfill": "^1.0.7",
     "fastscan": "^1.0.4",
