--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-contextmenu": "^1.5.10",
     "vue-croppa": "^1.3.8",
     "vue-router": "^3.0.7",
+    "vue-ueditor-wrap": "^2.4.1",
     "vuex": "^3.1.1",
     "vuex-persist": "^2.0.1",
     "xterm": "^3.8.0"
